--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+        "prepare": "husky install",
+        "prettier:check": "prettier --check .",
+        "lint": "eslint ."
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -11,8 +15,8 @@
     "devDependencies": {
         "@playwright/test": "^1.51.1",
         "@types/node": "^22.13.10",
-        "@typescript-eslint/eslint-plugin": "^8.38.0",
-        "@typescript-eslint/parser": "^8.38.0",
+        "@typescript-eslint/eslint-plugin": "^8.39.0",
+        "@typescript-eslint/parser": "^8.39.0",
         "eslint": "^8.57.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^10.1.8",
@@ -22,8 +26,9 @@
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
         "prettier": "^3.6.2",
-        "typescript": "^5.8.3",
-        "prepare": "husky install",
-        "lint": "eslint ."
+        "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "eslint-config-airbnb": "^19.0.4"
     }
 }
