--- a/tsconfig.json
+++ b/tsconfig.json
@@ -121,7 +121,8 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "resolveJsonModule": true
     },
     "exclude": ["dist", "node_modules"]
 }
